# xibot

./: CMakeLists.txt  README.md  xibot.cfg
cmake/Modules/: FindLibXlfParser.cmake  FindLibXmdsClient.cmake
example/: main.c
src/: attrs.h  player.c  player.h  simple-time.c  simple-time.h  state.c  state.h  thrlck.c  thrlck.h  xibot.c  xibot.h  xignal.c  xignal.h  xmdsclient.c
